--- a/Projet/.classpath
+++ b/Projet/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="//etu.ad.univ-lorraine.fr/tempesti3u/Bureau/mysql-connector-java-8.0.25.jar">
+	<classpathentry kind="lib" path="C:/Users/skyro/Desktop/Moi/Cours Damien/Cours 2020-2021 IUT/S3/CPOA/mysql-connector-java-8.0.25/mysql-connector-java-8.0.25.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
